refactor: use api key in hook

--- a/app.config.json
+++ b/app.config.json
@@ -1,10 +1,10 @@
 {
-  apps: [
+  "apps": [
     {
-      name: "use-popcorn",
-      script: "npx",
-      interpreter: "none",
-      args: "serve -s build -p 3007",
-    },
+      "name": "use-popcorn",
+      "script": "npx",
+      "interpreter": "none",
+      "args": "serve -s build -p 3007"
+    }
   ]
 }
